Changes made to index file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <a href="#">Location</a>
 </nav>
 <main>
-  <p id="demo"> Welcome </p>
+  <p id="demo"> Welcome To My Website</p>
   <button onclick="myFunction()">Change Text</button>
 </main>
 
